linked image, fixed spacing in header

--- a/wp-content/themes/freedombeat/style.css
+++ b/wp-content/themes/freedombeat/style.css
@@ -88,6 +88,7 @@ a {
 }
 
 #logo {
+  width:300px !important;
   margin: 21px 0 2px 0px;
 }
 
